k8s/domains/entitlements/infra/postgres/base/entitlements-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: entitlements-postgres
spec:
  type: ClusterIP
  selector:
    app: entitlements-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
