k8s/domains/entitlements/infra/postgres/base/entitlements-postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-entitlements-components-to-postgres
spec:
  podSelector:
    matchLabels:
      app: entitlements-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: entitlements-api
        - podSelector:
            matchLabels:
              app: entitlements-migrations
        - podSelector:
            matchLabels:
              app: outbox-publisher
        - podSelector:
            matchLabels:
              app: accounts-projector
      ports:
        - protocol: TCP
          port: 5432
